--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: Vasilis Giannopoulos
-description: Welcome to my GitHub page
+description: Welcome to my GitHub page.
 cover: assets/images/radhakrishna.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
-baseurl: "/hanuman/" # the subpath of your site, e.g. /blog/ or / for root
-url: "https://samanyougarg.com" # the base hostname & protocol for your site
+baseurl: "/vasilis-g/" # the subpath of your site, e.g. /blog/ or / for root
+url: "https://vasilis-g.github.io/" # the base hostname & protocol for your site
 
 pagination:
 
